fixed overflow

--- a/assets/scss/alex/navigation.scss
+++ b/assets/scss/alex/navigation.scss
@@ -53,3 +53,6 @@
 
     }
 }
+html {
+    overflow: hidden;
+}
